changes in jwt token validator file and created .env